# everything-vibe-coding

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  TODOS.md  install-codex.sh  install.sh
agents/: a11y-architect.md  build-error-resolver.md  code-architect.md  code-explorer.md  code-reviewer.md  code-simplifier.md  comment-analyzer.md  database-reviewer.md  django-build-resolver.md  django-reviewer.md  doc-updater.md  docs-lookup.md  e2e-runner.md  fastapi-reviewer.md  harness-optimizer.md  loop-operator.md  mle-reviewer.md  performance-optimizer.md  planner.md  pr-test-analyzer.md  python-reviewer.md  pytorch-build-resolver.md  refactor-cleaner.md  rust-build-resolver.md  rust-reviewer.md  security-reviewer.md  silent-failure-hunter.md  swift-build-resolver.md  swift-reviewer.md  tdd-guide.md  type-design-analyzer.md  typescript-reviewer.md
commands/: build-fix.md  code-review.md  cost-report.md  ecc-guide.md  fastapi-review.md  harness-audit.md  hookify-configure.md  hookify-help.md  hookify-list.md  hookify.md  learn-eval.md  learn.md  loop-start.md  loop-status.md  mempaw-loop-plan.md  mempaw-loop-start.md  mempaw-loop-status.md  model-route.md  plan-orchestrate.md  plan-prd.md  plan.md  prune.md  python-review.md  refactor-clean.md  rust-build.md  rust-review.md  rust-test.md  (+6 more)
tools/: HANDOFF.schema.json  README.md  handoff_extractor.py  orchestrator.py  plan_md_to_json.py  pyproject.toml  quality_gate.py
tools/tests/: test_fixture_run_e2e.py  test_handoff_extractor.py  test_orchestrator_skeleton.py  test_plan_md_to_json.py  test_quality_gate.py  test_subprocess_runner.py
tools/tests/fixtures/: plan.orchestrate.minimal.json
tools/tests/integration/: test_demo_pipeline.py
(+181 files in other folders)
