[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator-tools"
version = "0.0.0"
description = "CLI utilities and validation helpers for the Claude Code orchestrator MVP."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default: deselect integration tests so quality-gate `pytest -x` does not
# accidentally fire real subprocess / API calls.  Run them explicitly with
# `pytest -m integration` (or `-m 'integration or not integration'`).
addopts = "-q --strict-markers -m 'not integration'"
markers = [
    "integration: real subprocess / network tests (opt in with -m integration)",
]

[tool.setuptools]
py-modules = ["plan_md_to_json", "orchestrator", "handoff_extractor"]
